<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="settings">Settings</string>
    <string name="new_actvity">New activity</string>
    <string name="routes">Routes</string>
    <string name="workouts">Workouts</string>
    <string name="history">History</string>
    <string name="slider">Slider</string>
    <string name="progress">Progress</string>
    <string name="slide_btn">Slide Button</string>
    <string name="radio_btn">Radio</string>
    <string name="checkbox">Checkbox</string>
    <string name="selected">Selected</string>
    <string name="tab">Tab</string>
    <string name="button">Button</string>
    <string name="home_button">Home</string>
    <string name="app_name">Skinry</string>
    <string name="action_settings">Settings</string>
    <string name="about_button">About us</string>
    <string name="history_button">History</string>
    <string name="take_photo_button">Take photo</string>
    <string name="retake_photo">Retake</string>
    <string name="cannot">ARGH</string>
    <string name="album_name">Skinry</string>
    <string name="take_another_button">Take another</string>
    <string name="clear_history">Clear history</string>
    <string name="empty_history">Your history is empty</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_unacceptable_photo">Looks like there is no face on photo. Retake?</string>
    <string name="ok">OK</string>
    <string name="deleting_history">Are you sure you want to delete history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save_button">Save</string>
    <string name="attention">Attention!</string>
    <string name="error">Error!</string>
    <string name="error_no_face">There is no face on photo!</string>
    <string name="error_small_face">Face is too small!</string>
    <string name="critical_error">Critical server\'s error. Try again later.</string>
    <string name="save_error">Error while saving</string>
    <string name="while_processing">It\'s processing, wait...</string>
    <string name="clear_skin">Skin\'s cleanness</string>
    <string name="clear_skin_is">Skin\'s cleanness is</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="no_internet">You are not connected to the internet</string>
    <string name="saved">Saved</string>
    <string name="take_selfie">Take a photo of your face</string>
    <string name="wait_proc">Wait till the photo will be processed</string>
    <string name="track_changes">Monitor the cleanness of your face</string>
    <string name="about_us1">With this app you can monitor cleanness of your face.</string>
    <string name="about_us2">Regularly take photo of your face, reveal problems and deal with them.</string>
    <string name="about_us3">We are constantly working on this app improving it.</string>
    <string name="about_us4">Read news about us in social networks and in our blog</string>
    <string name="rate_us">Rate this app</string>
    <string name="photo_proc">Photo is processed</string>
    <string name="empty_string"></string>
    <string name="title_activity_ads">AdsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="ads_title">Хотите сделать кожу чище?</string>
    <string name="ads_message">Подпишитесь на консультацию профессионального дерматолога прямо в приложении!</string>
    <string name="ads_opt1">1 месяц — 200 рублей</string>
    <string name="ads_opt2">3 месяца — 500 рублей</string>
    <string name="ads_opt3">6 месяцев — 900 рублей</string>
    <string name="confirm_pay">Подтвердите оплату</string>
    <string name="subscript_unabled">Извините, эта возможность станет доступна в ближайшее время!</string>

</resources>