<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/l"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_smoke"
    android:orientation="vertical" >

    

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:background="@color/background">

        <LinearLayout
            android:id="@+id/main1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slider"
                android:textColor="@color/gray" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="60"
                android:progressDrawable="@drawable/slider_progress_layer"
                android:thumb="@drawable/slider_thumb" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/progress"
                android:textColor="@color/gray" />

            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/lblProgress1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/slider"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lblProgress2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slider"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/progress_layer" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/slide_btn"
                android:textColor="@color/gray" />

            <LinearLayout
                android:id="@+id/f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Switch
                    android:id="@+id/switch1"
                    style="@style/custom_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Switch
                    android:id="@+id/switch1"
                    style="@style/custom_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/radio_btn"
                    android:textColor="@color/gray" />

                <RadioGroup
                    android:id="@+id/radioGroup1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radio0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:button="@drawable/radio_btn"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/radio_btn" />
                </RadioGroup>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/checkbox"
                    android:textColor="@color/gray" />

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:button="@drawable/checkbox"
                    android:checked="true" />

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/tab"
                android:textColor="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tab_bg_yellow"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/demoTab1"
                    style="@style/tab_btn_small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/selected" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/demoTab2"
                    style="@style/tab_btn_small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Option 2" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/demoTab3"
                    style="@style/tab_btn_small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Option 3" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/button"
                android:textColor="@color/gray" />

            <Button
                android:id="@+id/btnDemo"
                style="@style/yellow_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Share this video" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>