<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxHeight="60dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/back_img"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/rect_with_shadow"
            android:orientation="vertical" >

                <Button
                    android:id="@+id/take_photo_button"
                    style="@style/yellow_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/take_photo_button" />
        </LinearLayout>
    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_border" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical" >


            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/imageView"
                android:src="@drawable/camera44"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="39dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/take_selfie"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView"
                android:layout_marginLeft="39dp" />
        </RelativeLayout>
<View
android:id="@+id/view1"
android:layout_width="match_parent"
android:layout_height="1dp"
android:background="@color/gray_border" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical" >


            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/imageView11"
                android:src="@drawable/sand6"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="39dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wait_proc"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView11"
                android:layout_marginLeft="39dp" />
        </RelativeLayout>
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_border" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical" >


            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:id="@+id/imageView12"
                android:src="@drawable/educational13"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="39dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_changes"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView12"
                android:layout_marginLeft="39dp" />
        </RelativeLayout>
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_border" />
    </LinearLayout>



</ScrollView>
