<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxHeight="60dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/back_img"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/rect_with_shadow"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ads_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/ads_message"
                android:textAlignment="center"/>
        </LinearLayout>
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_border" />
        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:onClick="onClick">


            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/imageView"
                android:src="@drawable/num1"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="39dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ads_opt1"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView"
                android:layout_marginLeft="39dp" />
        </RelativeLayout>
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_border" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:onClick="onClick"
            android:id="@+id/rl2">


            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/imageView11"
                android:src="@drawable/num3"
                android:layout_marginLeft="39dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ads_opt2"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView11"
                android:layout_marginLeft="39dp" />
        </RelativeLayout>
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_border" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:onClick="onClick"
            android:id="@+id/rl3">


            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:id="@+id/imageView12"
                android:src="@drawable/num6"
                android:layout_marginLeft="39dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ads_opt3"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imageView12"
                android:layout_marginLeft="39dp" />
        </RelativeLayout>
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_border" />
    </LinearLayout>



</ScrollView>
